--- a/circles.html
+++ b/circles.html
@@ -6,6 +6,21 @@
         // https://github.com/cmisenas/canny-edge-detection
         // http://ru.wikipedia.org/wiki/%D0%94%D0%B8%D1%84%D1%84%D0%B5%D1%80%D0%B5%D0%BD%D1%86%D0%B8%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D0%B3%D0%B5%D0%BE%D0%BC%D0%B5%D1%82%D1%80%D0%B8%D1%8F_%D0%BA%D1%80%D0%B8%D0%B2%D1%8B%D1%85
 
+        function sqr(x) { return x*x; }
+        function abs(x) { return x >= 0 ? x : -x; }
+        function sign(x) {return x >= 0 ? 1 : -1; }
+        function min(a, b) { return a < b ? a : b; }
+        function max(a, b) { return a > b ? a : b; }
+        function ss(x1, y1, x2, y2) { return x1*x2 + y1*y2; }
+        function module(x, y) { return Math.sqrt(x*x + y*y); }
+        function rotS(edge, i) {
+            var DY1 = edge.y[i] - edge.y[i - 1];
+            var DX1 = edge.x[i] - edge.x[i - 1];
+            var DY2 = edge.y[i+1] - edge.y[i];
+            var DX2 = edge.x[i+1] - edge.x[i];
+            return (DY1*DX2 - DY2*DX1); // /(module(DX1, DY1) * module(DX2, DY2));
+        }
+
         // { Canvas
         function Canvas(id, w, h, res) {
             this.elem = document.getElementById(id);
@@ -148,23 +163,23 @@
                 console.timeEnd('Blur Time');
 
                 function generateKernel(sigma, size) {
-                var matrix = [];
-                var E = 2.718;//Euler's number rounded of to 3 places
-                for (var y = -(size - 1)/2, i = 0; i < size; y++, i++) {
-                    matrix[i] = [];
-                    for (var x = -(size - 1)/2, j = 0; j < size; x++, j++) {
-                        //create matrix round to 3 decimal places
-                        matrix[i][j] = 1/(2 * Math.PI * Math.pow(sigma, 2)) * Math.pow(E, -(Math.pow(Math.abs(x), 2) + Math.pow(Math.abs(y), 2))/(2 * Math.pow(sigma, 2)));
+                    var matrix = [];
+                    var E = 2.718;//Euler's number rounded of to 3 places
+                    for (var y = -(size - 1)/2, i = 0; i < size; y++, i++) {
+                        matrix[i] = [];
+                        for (var x = -(size - 1)/2, j = 0; j < size; x++, j++) {
+                            //create matrix round to 3 decimal places
+                            matrix[i][j] = 1/(2 * Math.PI * Math.pow(sigma, 2)) * Math.pow(E, -(Math.pow(Math.abs(x), 2) + Math.pow(Math.abs(y), 2))/(2 * Math.pow(sigma, 2)));
+                        }
                     }
-                }
-                //normalize the matrix to make its sum 1
-                var normalize = 1/that.sum(matrix);
-                for (var k = 0; k < matrix.length; k++) {
-                    for (var l = 0; l < matrix[k].length; l++) {
-                        matrix[k][l] = Math.round(normalize * matrix[k][l] * 1000)/1000;
+                    //normalize the matrix to make its sum 1
+                    var normalize = 1/that.sum(matrix);
+                    for (var k = 0; k < matrix.length; k++) {
+                        for (var l = 0; l < matrix[k].length; l++) {
+                            matrix[k][l] = Math.round(normalize * matrix[k][l] * 1000)/1000;
+                        }
                     }
-                }
-                return matrix;
+                    return matrix;
                 }
 
                 return imgDataCopy;
@@ -425,41 +440,39 @@
             return edges;
         }
 
+        function avg(edge, i, r) {
+            var cX = 0;
+            var cY = 0;
+            var collected = 0;
+            for(var k = max(0, i-r); k < min(edge.length, i+r); ++k) {
+                cX += edge.x[k];
+                cY += edge.y[k];
+                ++collected;
+            }
+            return {x:cX/collected, y:cY/collected};
+        }
+
         function smoothFragments(edges, r) {
             var sedges = [];
             var sedges_pos = 0;
             for(var i = 0; i < edges.length; ++i){
                 var edge = edges[i];
-                if(edge.length < 3*r)
-                    continue;
-
-                var arSize = ~~(edge.length/r);
+                var arSize = edge.length - 2*r;
+                if (arSize <= 0)
+                   continue;
                 var arX = new Array(arSize);
                 var arY = new Array(arSize);
-
                 var sedge_pos = 0;
-                var cX = 0;
-                var cY = 0;
-                var collected = 0;
-                for(var k = 0; k < edge.length; ++k) {
-                    cX += edge.x[k];
-                    cY += edge.y[k];
-                    ++collected;
-                    if (collected == r) {
-                        arX[sedge_pos] = cX / r;
-                        arY[sedge_pos] = cY / r;
-                        ++sedge_pos;
-                        cX = 0;
-                        cY = 0;
-                        collected = 0;
-                    }
+                for(var k = r; k < edge.length - r; ++k) {
+                    var p = avg(edge, k, r);
+                    arX[sedge_pos] = p.x;
+                    arY[sedge_pos] = p.y;
+                    ++sedge_pos;
                 }
-                sedges[sedges_pos++] = {x:arX, y:arY, length:arSize};
+                sedges[sedges_pos++] = {x:arX, y:arY, length:sedge_pos};
             }
             return sedges;
         }
-
-        function sqr(x) { return x*x; }
 
         function splitByJumpsFragments(edges, dist) {
             var dist2 = dist * dist;
@@ -490,24 +503,30 @@
             return sedges;
         }
 
-        function splitByRadiusFragments(edges, dist) {
+        function splitByRotFragments(edges) {
             var sedges = [];
             var sedges_pos = 0;
             for(var i = 0; i < edges.length; ++i){
                 var edge = edges[i];
+                if (edge.length < 3)
+                    continue;
 
-                var arX = [edge.x[0]];
-                var arY = [edge.y[0]];
-                var sedge_pos = 1;
-                for(var k = 1; k < edge.length; ++k) {
-                    var sdist2 = sqr(edge.x[k] - edge.x[k-1]) + sqr(edge.y[k] - edge.y[k-1]);
-                    if (sdist2 >= dist2) {
+                var arX = [edge.x[0], edge.x[1]];
+                var arY = [edge.y[0], edge.y[1]];
+                var sedge_pos = 2;
+                var prevRot = rotS(edge, 1);
+                for(var k = 2; k < edge.length - 1; ++k) {
+                    var rot = rotS(edge, k);
+                    if (rot*prevRot < 0 && sedge_pos > 31) {
                         if (sedge_pos > 3)
                            sedges[sedges_pos++] = {x:arX, y:arY, length:sedge_pos};
                         sedge_pos = 0;
                         arX = [];
                         arY = [];
                     }
+
+                    prevRot = rot;
+
                     arX[sedge_pos] = edge.x[k];
                     arY[sedge_pos] = edge.y[k];
                     ++sedge_pos;
@@ -527,12 +546,101 @@
                 canvas.ctx.moveTo(edge.x[0], edge.y[0]);
                 for(var k = 1; k < edge.length; ++k) {
                   canvas.ctx.lineTo(edge.x[k], edge.y[k]);
+
+                    canvas.ctx.arc(edge.x[k], edge.y[k], 2, 0, 2*Math.PI);
                 }
                 canvas.ctx.stroke();
             }
         }
 
+        var ic = 0;
+        function getCircle(x, y, canvas) {
+           var N = x.length;
+           if (N < 32)
+              return false;
+           var Rmax = min(canvas.height, canvas.width)/4;
+           var s = {x:0, y:0, r:4};
+           for (var i = 0;  i < N; ++i) {
+              s.x += x[i];
+              s.y += y[i];
+           }
+           s.x /= N;
+           s.y /= N;
+           for (var u = 0; u < 32; ++u) {
+             var A = [[0,0,0], [0,0,0], [0,0,0]];
+             var b = [0,0,0];
+             for (var i = 0;  i < N; ++i) {
+                var xi = x[i], yi = y[i];
+                var dx = xi - s.x, dy = yi - s.y;
+                var dx2 = dx*dx, dy2 = dy*dy, dxdy = dx * dy;
+                var R = Math.sqrt(dx2 + dy2);
+                if (R == 0) R = 1;
+                var R2 = R*R;
+                var rR = s.r/R, dxR = dx/R, dyR = dy/R;
+                var rR3 = rR/R2;
+                A[0][0] += rR3*dx2 - rR + 1; A[0][1] += rR3*dxdy;         A[0][2] += dxR;
+              /*A[1][0] = A[0][1];*/         A[1][1] += rR3*dy2 - rR + 1; A[1][2] += dyR;
+              /*A[2][0] = A[0][2];*/       /*A[2][1] = A[1][2];*/       /*A[1][2] += 1;*/
+                b[0] += (1 - rR) * dx;
+                b[1] += (1 - rR) * dy;
+                b[2] += R - s.r;
+             }
+             A[1][0] = A[0][1]; A[2][0] = A[0][2]; A[2][1] = A[1][2]; A[2][2] = N;
+
+             var  determinant = +A[0][0]*[A[1][1]*A[2][2]-A[2][1]*A[1][2]]
+                                -A[0][1]*[A[1][0]*A[2][2]-A[1][2]*A[2][0]]
+                                +A[0][2]*[A[1][0]*A[2][1]-A[1][1]*A[2][0]];
+             if (determinant == 0)
+                return false;
+
+             var invdet = 1/determinant;
+
+             // invert transponed
+             var r = [[0,0,0], [0,0,0], [0,0,0]];
+             r[0][0] =  (A[1][1]*A[2][2]-A[2][1]*A[1][2])*invdet;
+             r[1][0] = -(A[0][1]*A[2][2]-A[0][2]*A[2][1])*invdet;
+             r[2][0] =  (A[0][1]*A[1][2]-A[0][2]*A[1][1])*invdet;
+             r[0][1] = -(A[1][0]*A[2][2]-A[1][2]*A[2][0])*invdet;
+             r[1][1] =  (A[0][0]*A[2][2]-A[0][2]*A[2][0])*invdet;
+             r[2][1] = -(A[0][0]*A[1][2]-A[1][0]*A[0][2])*invdet;
+             r[0][2] =  (A[1][0]*A[2][1]-A[2][0]*A[1][1])*invdet;
+             r[1][2] = -(A[0][0]*A[2][1]-A[2][0]*A[0][1])*invdet;
+             r[2][2] =  (A[0][0]*A[1][1]-A[1][0]*A[0][1])*invdet;
+
+             var d = [
+               r[0][0] * b[0] + r[0][1] * b[1] + r[0][2] * b[2],
+               r[1][0] * b[0] + r[1][1] * b[1] + r[1][2] * b[2],
+               r[2][0] * b[0] + r[2][1] * b[1] + r[2][2] * b[2],
+             ];
+             s.x += d[0];
+             s.y += d[1];
+             s.r += d[2];
+             if (s.r <= 0)
+                return false;
+             if (s.r > Rmax)
+                break;
+           }
+           console.log(++ic + 'x:' + s.x + ' y:' + s.y + ' r:' + s.r);
+           return s;
+        }
+
+        function drawAsCircle(edges, canvas) {
+            var colors = ["#F00", "#FF0", "#F0F", "#0FF"];
+            for(var i = 0; i < edges.length; ++i){
+                var edge = edges[i];
+                var circle = getCircle(edge.x, edge.y, canvas);
+                if (circle) {
+                    canvas.ctx.strokeStyle = colors[i % colors.length];
+                    canvas.ctx.beginPath();
+                    canvas.ctx.arc(circle.x, circle.y, circle.r, 0, 2*Math.PI);
+                    canvas.ctx.stroke();
+               }
+            }
+        }
+
+
         function init() {
+            //new Canvas("image").loadImg("pettern1.png").onImageLoaded = function() {
             new Canvas("image").loadImg("test.jpg").onImageLoaded = function() {
                 var canvas = this;
                 var canny = new Canny(this);
@@ -543,12 +651,16 @@
                 newImgData = canny.hysteresis(newImgData, parseInt(document.getElementById("d").value))();
 
                 var edges =
-                    splitByJumpsFragments(
+                    splitByRotFragments(
                         smoothFragments(
-                            createFragments(canny.getAllEdges(newImgData), canvas.width),
-                            8),
-                        10);
+                            splitByJumpsFragments(
+                                    createFragments(canny.getAllEdges(newImgData), canvas.width)
+                            , 16)
+                        , 8)
+                    )
+                    ;
                 drawEdges(edges, canvas);
+                drawAsCircle(edges, canvas);
                 //canvas.ctx.putImageData(newImgData, 0, 0);
             };
         }
