--- a/circles.html
+++ b/circles.html
@@ -547,19 +547,18 @@
                 canvas.ctx.moveTo(edge.x[0], edge.y[0]);
                 for(var k = 1; k < edge.length; ++k) {
                   canvas.ctx.lineTo(edge.x[k], edge.y[k]);
-
-                    canvas.ctx.arc(edge.x[k], edge.y[k], 2, 0, 2*Math.PI);
+                  canvas.ctx.arc(edge.x[k], edge.y[k], 2, 0, 2*Math.PI);
                 }
                 canvas.ctx.stroke();
             }
         }
 
         var ic = 0;
-        function getCircle(x, y, canvas) {
+        function getCircle(x, y, imgData) {
            var N = x.length;
            if (N < 32)
-              return false;
-           var Rmax = min(canvas.height, canvas.width)/4;
+              return null;
+           var Rmax = min(imgData.height, imgData.width)/4;
            var s = {x:0, y:0, r:4};
            for (var i = 0;  i < N; ++i) {
               s.x += x[i];
@@ -592,7 +591,7 @@
                                 -A[0][1]*[A[1][0]*A[2][2]-A[1][2]*A[2][0]]
                                 +A[0][2]*[A[1][0]*A[2][1]-A[1][1]*A[2][0]];
              if (determinant == 0)
-                return false;
+                return null;
 
              var invdet = 1/determinant;
 
@@ -617,7 +616,7 @@
              s.y += d[1];
              s.r += d[2];
              if (s.r <= 0)
-                return false;
+                return null;
              if (s.r > Rmax)
                 break;
            }
@@ -626,13 +625,10 @@
            s.y = ~~s.y;
            s.r = ~~s.r;
 
-           return s;
+           return checkColor(s, imgData);
         }
 
         function checkColor(c, imgData) {
-            if (c==false)
-              return c;
-
             var cRed = 0;
             var cGreen = 0;
             var cBlue = 0;
@@ -660,7 +656,7 @@
                 cGreen /= pointCount;
                 cBlue /= pointCount;
             }
-            c.color = "rgba(" + (~~cRed) + "," + (~~cGreen) + "," + (~~cBlue) + ", 0.99)";
+            c.color = "rgba(" + (~~cRed) + "," + (~~cGreen) + "," + (~~cBlue) + ", 0.3)";
 
             var error = 0;
             for (var i = 0; i < pointCount; ++i) {
@@ -716,39 +712,37 @@
            }
         }
 
+        function drawCircles(circles, canvas, bkColor) {
+           for(var i = 0; i < circles.length; ++i){
+                var circle = circles[i];
+                canvas.ctx.beginPath();
+                canvas.ctx.arc(circle.x, circle.y, circle.r, 0, 2*Math.PI, false);
+                canvas.ctx.fillStyle = (bkColor != null) ? bkColor : circle.color;
+                canvas.ctx.fill();
+                canvas.ctx.strokeStyle = canvas.ctx.fillStyle;
+                //canvas.ctx.strokeStyle = colors[i % colors.length];
+                canvas.ctx.stroke();
+           }
+        }
 
-        function drawAsCircle(edges, canvas, imgData) {
-            var circles = new Array(edges.length);
+        function getBestCircles(edges, imgData) {
+            var circles = [];
             var circleCount = 0;
             for(var i = 0; i < edges.length; ++i){
                 var edge = edges[i];
-                var circle = getCircle(edge.x, edge.y, canvas);
-                if (circle) {
-                    circles[circleCount++] = checkColor(circle, imgData)
+                var circle = getCircle(edge.x, edge.y, imgData);
+                if (circle!=null/*&& circle.errorU < 50*/) {
+                    circles[circleCount++] = circle;
                 }
             }
-
             heap_sort(circles, circleCount, function(circle) { return 1/circle.error; } );
-            var colors = ["#F00", "#FF0", "#F0F", "#0FF"];
-            for(var i = 0; i < circleCount; ++i) {
-                var circle = circles[i];
-                if (circle.errorU < 50) {
-                    canvas.ctx.beginPath();
-                    canvas.ctx.arc(circle.x, circle.y, circle.r, 0, 2*Math.PI, false);
-                    canvas.ctx.fillStyle = 0;//circle.color;
-                    canvas.ctx.fill();
-                    canvas.ctx.strokeStyle = canvas.ctx.fillStyle;
-                    //canvas.ctx.strokeStyle = colors[i % colors.length];
-                    canvas.ctx.stroke();
-                }
-            }
+            return circles;
         }
 
 
         function init() {
-            //new Canvas("image").loadImg("pettern1.png").onImageLoaded = function() {
-            new Canvas("image").loadImg("test.jpg").onImageLoaded = function() {
-            //new Canvas("image").loadImg("test2.jpg").onImageLoaded = function() {
+            var img = document.getElementById('imageS');
+            new Canvas("image").loadImg(img.src).onImageLoaded = function() {
                 var canvas = this;
                 var canny = new Canny(this);
                 var currentImgData = canvas.ctx.getImageData(0, 0, canvas.width, canvas.height);
@@ -768,19 +762,26 @@
                                     createFragments(canny.getAllEdges(newImgData), canvas.width)
                             , 16)
                         , 8)
-                    )
-                    ;
-                //drawEdges(edges, canvas);
-                drawAsCircle(edges, canvas, currentImgData);
-                //canvas.ctx.putImageData(newImgData, 0, 0);
+                    );
+                var circles =  getBestCircles(edges, currentImgData);
+
+                canvas.ctx.beginPath();
+                canvas.ctx.fillStyle = "gray";
+                canvas.ctx.fillRect(0,0,canvas.width,canvas.height);
+
+                drawCircles(circles, canvas, null);
+
+                //img.src = document.getElementById('image').toDataURL("image/jpg");
             };
         }
 -->
 </script>
 </head>
 <body onload="init();">
+<img id="imageS" src="test4.jpg"/>
 <canvas id="image">
 </canvas>
 <input id="d" type="number" value="90"/><button onclick="init()">Redraw</button>
+<div id="data"></div>
 </body>
 </html>
